--- a/styles/partials/_aboutWelcome.scss
+++ b/styles/partials/_aboutWelcome.scss
@@ -15,6 +15,7 @@
     }
     &__info {
         display: flex;
+        flex-shrink: 1;
     }
     &__half {
         width: 50%;
@@ -26,9 +27,11 @@
             display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
+            flex-shrink: 3;
         }
         &__li {
             padding: 20px;
+            max-width: 50%;
             text-align: center;
         } 
     }
