--- a/styles/partials/_servicesReviews.scss
+++ b/styles/partials/_servicesReviews.scss
@@ -1,6 +1,6 @@
 .services {
     text-align: center;
-    padding: 70px 0;
+    padding: 70px 20px;
     &__gallery  {
         padding-top: 70px;
         img {
@@ -58,6 +58,27 @@
         }
         &--author {
             font-style: italic;
+        }
+    }
+}
+
+@media (max-width: 764px) {
+    .services {
+    text-align: center;
+    padding: 70px 20px;
+    &__gallery  {
+        padding: 25px 0;
+        &__ul {
+            flex-direction: column;
+            flex-wrap: wrap;
+            }
+        &__li {
+            width: 100%;
+            padding: 30px;
+            }
+        &__li:nth-of-type(2) {
+            order: -1;
+        }
         }
     }
 }
