--- a/styles/partials/_eventsAsk.scss
+++ b/styles/partials/_eventsAsk.scss
@@ -2,6 +2,14 @@
     text-align: center;
     &__h3 {
         margin: 60px 0;
+        &--white {
+            color: white;
+        }
+    }
+    &__p {
+        &--white {
+            color: white;
+        }
     }
     &__sampleEvent {
         &__ul {
@@ -12,11 +20,12 @@
             position: relative;
             width: 33.3%;
             img {
-                max-height: 255px;
+                max-height: 242px;
             }
             &__content {
                 background:rgba(42,42,42,0.9);
                 position: absolute;
+                max-height: 242px;
                 top: 0;
                 left: 0;
                 right: 0;
@@ -57,7 +66,7 @@
     }
 }
 
-@media (max-width: 1089px) {
+@media (max-width: 1082px) {
    .events {
         &__sampleEvent {
             &__ul {
@@ -66,15 +75,18 @@
                 align-items: center;
             }
             &__li {
-                margin: 10px 0;
-                width: 60%;
+                width: 50%;
             }
+            
         }
     }
 }
 
 @media (max-width: 764px) {
     .events {
+        &__h3 {
+            margin: 20px 0;
+        }
         &__sampleEvent {
             &__ul {
                 flex-direction: column;
@@ -82,14 +94,18 @@
                 align-items: center;
             }
             &__li {
-                margin: 10px 0;
+                margin-bottom: 10px;
                 width: 60%;
+            }
+            h3 {
+                font-size: 2rem;
             }
             p {
                 display: none;
             }
             .container {
                 border: 0;
+                padding: 0;
             }
         }
     }
