--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -2,6 +2,12 @@
     background-color: $darkgrey;
     padding: 0 20px;
     padding-top: 50px;
+    position: relative;
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        }
     &__h4 {
         margin-bottom: 30px;
     }
@@ -31,61 +37,76 @@
         color: white;
         }
     }
-    .wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        .footerSections {
-            justify-content: space-between;
-            display: flex;
-            &__email {
-                background-color: $darkgrey;
-                color: white;  
-                border: 0;
-                border: 1px solid white;
-                padding: 6px;
-                font-family: 'Lora', serif;
-                font-size: 1.3rem;
-                background-image: url(../images/paper-plane-regular.svg);
-                background-repeat: no-repeat;
-                background-position: 94%;
-                background-size: 12px 12px;
-                margin-top: 10px;
-                width: 230px;
-            }
-            ::placeholder {
-                color: white;
-            }
-            &__third {
-                width: 33%;
-            }
-            &__third:nth-of-type(1) {
-                flex: 0 5 auto;
-            }
-            &__third:nth-of-type(2) {
-                flex: 10 2 420px;
-                padding: 0 60px;
-            }
-            &__third:nth-of-type(3) {
-                flex: 1 1 260px;
-            }
-            &__gallery {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-between;
-            }
-            &__galleryItem {
-                width: 22%;
-                margin: 5px 0;
-            }
-        }
-        
+    i {
+        margin-right: 5px;
     }
-    
 }
 
-@media (max-width: 860px) {
+.footerSections {
+    justify-content: space-between;
+    display: flex;
+    &__email {
+        background-color: $darkgrey;
+        color: white;  
+        border: 0;
+        border: 1px solid white;
+        padding: 6px;
+        font-family: 'Lora', serif;
+        font-size: 1.3rem;
+        background-image: url(../images/paper-plane-regular.svg);
+        background-repeat: no-repeat;
+        background-position: 94%;
+        background-size: 12px 12px;
+        margin-top: 10px;
+        width: 230px;
+    }
+    ::placeholder {
+        color: white;
+    }
+    &__third {
+        width: 33%;
+    }
+    &__third:nth-of-type(1) {
+        flex: 0 5 auto;
+    }
+    &__third:nth-of-type(2) {
+        flex: 10 2 420px;
+        padding: 0 60px;
+    }
+    &__third:nth-of-type(3) {
+        flex: 1 1 260px;
+    }
+    &__gallery {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    &__galleryItem {
+        width: 22%;
+        margin: 5px 0;
+    }
+    &__socialMedia {
+        color: #848484;
+        font-size: 20px;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        right: 25px;
+        bottom: 155px;
+        &__a {
+            color: #848484;
+            margin: 20px 0;
+            transition: 0.3s;
+        }
+        &__a:hover {
+            color: $yellow;
+        }
+    }
+}
+
+@media (max-width: 979px) {
     .footer {
+        padding: 5px 20px;
         &__h4 {
             margin-top: 20px;
         }
@@ -93,6 +114,10 @@
             display: flex;
             justify-content: center;
         }
+        &__socialMedia {
+            flex-direction: row;
+            border: 1px solid red;
+        } 
         .footer__wrapper {
             display: block;
             .footerSections {
@@ -104,10 +129,38 @@
                     border-top: 1px solid grey;
                 }
                 &__gallery {
-                    padding: 0 100px;
+                    width: 60%;
+                    margin: 0 auto;
                 }
             }
+        } 
+    }
+    
+    .footerSections {
+        &__socialMedia {
+            flex-direction: row;
+            width: 100%;
+            position: relative;
+            right: 0;
+            bottom: 0;
+            justify-content: center;
+            &__a {
+                margin: 0 20px;
+            }
+        } 
+    }  
+}
+
+@media (max-width: 516px) {
+    .footer {
+        &__ul {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &__li {
+            margin: 5px 0;
         }
     }
-
 }
+
