--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -23,32 +23,72 @@
     &__ul {
         align-self: center;
         flex-shrink: 1;
+        padding-top: 32px;
     }
     &__li {
         margin-left: 40px;
+    }
+    .hamburger,
+	.exit-responsive {
+		display: none;
+		transition: 0.5s;
+	}
+
+	.show.menu {
+		display: block;
+		position: absolute;
     }
 }
 
 @media (max-width: 762px) {
     .headerNav {
-        &__wrapper {
-        flex-direction: column;
-        text-align: left;
-        margin: 0 50px;
+        .hamburger,
+        .exit-responsive {
+            display: block;
+            font-size: 3rem;
+            margin-right: 2%;
+            margin-top: 3rem;
+            color: white;
+            &:hover {
+                color: $yellow;
+            }
         }
-        &__ul {
-            align-self: flex-start;
+        
+        .menu {
+            display: none;
+            position: relative;
+            top: 70px;
+            right: 5%;
+        }
+
+        .menu ul {
             display: flex;
+            align-items: flex-end;
             flex-direction: column;
         }
-        &__li {
+
+        .menu ul li {
             margin: 0;
-            margin-top: 20px;
         }
-    }
-    .header {
-        &__wrapper {
-            padding: 0 50px;
+        
+        .menu ul li:first-of-type {
+            text-align: left;
+        }
+
+        .menu ul a {
+            font-size: 2rem;
+            color: black;
+            margin: 5px 0;
+            padding: 2px 10px;
+            border-radius: 3px;
+            background-color: white;
+            line-height: 3rem;
+            width: 100%;
+            transition: 0.2s;
+            &:hover {
+                color: white;
+                background-color: $yellow;
+            }
         }
     }
 }
