--- a/styles/partials/_utils.scss
+++ b/styles/partials/_utils.scss
@@ -33,7 +33,7 @@ nav ul li a {
     text-decoration: none;
     transition: 0.3s;
     &:hover {
-        color: slategray;
+        color: $yellow;
     }
 }
 
