--- a/styles/partials/_eventsAsk.scss
+++ b/styles/partials/_eventsAsk.scss
@@ -19,11 +19,14 @@
         &__li {
             position: relative;
             width: 33.3%;
+            &:hover &__content {
+                display: block;
+                background:rgba(42,42,42,0.9);
+            }
             img {
                 max-height: 242px;
             }
             &__content {
-                background:rgba(42,42,42,0.9);
                 position: absolute;
                 max-height: 242px;
                 top: 0;
@@ -34,7 +37,8 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                padding: 0 40px;
+                padding: 25px 40px;
+                display: none;
             }
             .container {
                 width: 80%;
@@ -85,36 +89,24 @@
 @media (max-width: 764px) {
     .events {
         &__h3 {
-            margin: 20px 0;
+            margin-bottom: 35px;
         }
         &__sampleEvent {
-            &__ul {
-                flex-direction: column;
-                padding: 0;
-                align-items: center;
-            }
-            &__li {
-                margin-bottom: 10px;
-                width: 60%;
-            }
-            h3 {
-                font-size: 2rem;
-            }
             p {
                 display: none;
             }
-            .container {
-                border: 0;
-                padding: 0;
-            }
+             &__li {
+                 margin: 10px 0;
+                 .container {
+                     border: 0;
+                 }
+             }
         }
     }
+
     .askQuestion {
         &__input {
-            width: 80%;
-            margin: 0 20px;
-            margin-top: 50px;
-            margin-bottom: 20px;
+            width: 80%; 
         }
     }
 }
