--- a/styles/partials/_eventsAsk.scss
+++ b/styles/partials/_eventsAsk.scss
@@ -20,7 +20,9 @@
             position: relative;
             width: 33.3%;
             &:hover &__content {
-                display: block;
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 background:rgba(42,42,42,0.9);
             }
             img {
@@ -79,9 +81,9 @@
                 align-items: center;
             }
             &__li {
-                width: 50%;
-            }
-            
+                width: 45%;
+                margin: 5px 0;
+            } 
         }
     }
 }
@@ -91,19 +93,20 @@
         &__h3 {
             margin-bottom: 35px;
         }
+        &__h3--white {
+            font-size: 2rem;
+        }
         &__sampleEvent {
             p {
                 display: none;
             }
              &__li {
-                 margin: 10px 0;
                  .container {
                      border: 0;
                  }
              }
         }
     }
-
     .askQuestion {
         &__input {
             width: 80%; 
